@@ -1,5 +1,6 @@
 0.4.7 (in development)
 ------------------------------------------------------------------------
+- Fix: [#20737] Spent money in player window underflows when getting refunds.
 
 0.4.6 (2023-09-03)
 ------------------------------------------------------------------------
